# fabric

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  PKGBUILD  README.md  STYLE_GUIDE.md  default.nix  flake.nix  meson.build  pyproject.toml  requirements.txt  ruff.toml  run-widget.nix  setup.py
.github/: FUNDING.yml
env/: pyvenv.cfg
env/include/pygobject-3.0/: pygobject.h
examples/: bar.css  bar.py  desktop_widget.css  desktop_widget.py  fallback_colors.css  side_panel.css  side_panel.py  vertical_bar.py
examples/animated-circular-scale-widget/: config.py  style.css
examples/app-launcher/: app_launcher.py  config.py
examples/bar/: bar.css  bar.py  config.py  style.css
examples/bluetooth-widget/: bluetooth_widget.css  bluetooth_widget.py  config.py
examples/desktop-widget/: config.py  desktop_widget.css  desktop_widget.py  style.css
examples/icon-browser/: icon_browser.py
examples/notifications/: config.py  notifications.py  style.css
examples/side-panel/: config.py  side_panel.css  side_panel.py
examples/vertical-bar/: vertical_bar.css  vertical_bar.py
fabric/: __init__.py  __main__.py  client.py  service.py
fabric/audio/: __init__.py  service.py
fabric/battery/: __init__.py  service.py
fabric/bluetooth/: __init__.py  service.py
fabric/core/: __init__.py  application.py  fabricator.py  service.py
fabric/core/widgets/: __init__.py  wm.py
fabric/dbus_assets/: org.Fabric.fabric.xml
fabric/hyprland/: __init__.py  service.py  widgets.py
fabric/i3/: __init__.py  service.py  widgets.py
fabric/mango/: __init__.py  service.py
fabric/network/: service.py
fabric/niri/: __init__.py  service.py  widgets.py
fabric/notifications/: __init__.py  service.py
fabric/power_profiles/: __init__.py  service.py
fabric/powerprofiles/: service.py
fabric/system_tray/: __init__.py  service.py  system_tray.py  widgets.py
fabric/utils/: __init__.py  applications.py  helpers.py  string_formatter.py
fabric/utils/fabricator/: __init__.py  fabricator.py
fabric/widgets/: __init__.py  box.py  button.py  calendar.py  centerbox.py  chart.py  checkbox.py  checkbutton.py  circular_progress_bar.py  circularprogressbar.py  circularscale.py  container.py  date_time.py  datetime.py  entry.py  eventbox.py  fixed.py  flowbox.py  grid.py  image.py  label.py  list.py  overlay.py  revealer.py  scale.py  scrolled_window.py  scrolledwindow.py  separator.py  stack.py  svg.py  switch.py  wayland.py  widget.py  window.py  x11.py
fabric/widgets/shapes/: __init__.py  corner.py  star.py
fabric/widgets/webview/: __init__.py  javascript_bridge.js  webview.py
scripts/install_libcvc/: install_libcvc.sh  meson.build.patch
submodules/: libcvc.patch
tests/: service.1.py  service.2.py  service.3.py  service.4.py
