[project]
name = "fabric"
version = "0.0.1"
dependencies = [
  "click",
  "pycairo",
  "PyGObject",
  "loguru",
]
requires-python = ">=3.11"
authors = [
  {name = "Yousef El-Darsh", email = "yousef.eldarsh@gmail.com"},
  {name = "Kai Read", email = "ready@kairead.com"},
]
maintainers = [
  {name = "Yousef El-Darsh", email = "yousef.eldarsh@gmail.com"},
  {name = "Kai Read", email = "ready@kairead.com"},
]
description = "Next-Gen python framework for creating system widgets on *Nix systems!"
readme = "README.md"
keywords = ["widgets", "gtk", "linux", "pygobject", "bar", "statusbar", "panel", "dock"]
classifiers = [
  "Programming Language :: Python"
]

[project.optional-dependencies]
system-status = ["psutil"]

[tool.setuptools.package-data]
"*" = ["*.xml"]

[project.urls]
Repository = "https://github.com/Fabric-Development/fabric.git"
Documentation = "https://github.com/Fabric-Development/fabric/wiki"
"Bug Tracker" = "https://github.com/Fabric-Development/fabric/issues"
Changelog = "https://github.com/Fabric-Development/fabric/blob/master/CHANGELOG.md"
